--- a/app/globals.css
+++ b/app/globals.css
@@ -46,7 +46,11 @@ body {
 
 @layer utilities {
   .primary-gradient {
-    background: linear-gradient(129deg, #ff7000 0%, #e2995f 100%);
+    background: linear-gradient(129deg, #e72881 0%, #3161d6 100%);
+  }
+
+  .bg-hero-section-title {
+    background-image: linear-gradient(129deg, #e72881 32.88%, #3161d6 99.12%);
   }
 
   .dark-gradient {
@@ -76,7 +80,7 @@ body {
 }
 
 .primary-text-gradient {
-  background: linear-gradient(129deg, #ff7000 0%, #e2995f 100%);
+  background: linear-gradient(129deg, #e72881 0%, #3161d6 100%);
   background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
