--- a/styles/theme.css
+++ b/styles/theme.css
@@ -96,7 +96,7 @@
   }
 
   .primary-gradient {
-    background: linear-gradient(129deg, #ff7000 0%, #e2995f 100%);
+    background: linear-gradient(129deg, #e72881 0%, #3161d6 100%);
   }
 
   .dark-gradient {
